# cg_wordle

./: Makefile  pyproject.toml  script.py  script_v0.py  stats.py  test_cases.txt
